- Finalização da segunda tela. Modelo será revisado.

--- a/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
+++ b/src/app/pages/tela2/buttons/components/anoButtons/anoButtons.html
@@ -1,30 +1,27 @@
-<div align="right">
 
-  <ul>
-  <li>  <a href="#">  <span> 2015 </span> <img src="{{ ( 'seta-down2'| baProfilePicture ) }}" width="35px" height="35px" > </a>
-    <ul id="barra-de-rolagem">
-      <li><a href="#"> 2017 </a></li>
-      <li><a href="#"> 2016 </a></li>
-      <li><a href="#"> 2015 </a></li>
-      <li><a href="#"> 2014</a></li>
-      <li><a href="#"> 2013 </a></li>
-      <li><a href="#"> 2012 </a></li>
-      <li><a href="#"> 2011 </a></li>
-      <li><a href="#"> 2010 </a></li>
-      <li><a href="#"> 2009 </a></li>
-      <li><a href="#"> 2008 </a></li>
-      <li><a href="#"> 2007 </a></li>
-      <li><a href="#"> 2006 </a></li>
-      <li><a href="#"> 2005 </a></li>
-      <li><a href="#"> 2004 </a></li>
-      <li><a href="#"> 2003 </a></li>
-      <li><a href="#"> 2002 </a></li>
-      <li><a href="#"> 2001 </a></li>
-      <li><a href="#"> 2000 </a></li>
+<div class="btn-group flex-dropdown" dropdown>
+  <span>2015</span> <button type="button" class="btn bg-default" dropdownToggle addToggleClass="true">
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu" dropdownMenu id="barra-de-rolar">
 
-    </ul>
-  </li>
-</ul>
-
-
- </div>
+    <li><a href="#"> 2017 </a></li>
+    <li><a href="#"> 2016 </a></li>
+    <li><a href="#"> 2015 </a></li>
+    <li><a href="#"> 2014</a></li>
+    <li><a href="#"> 2013 </a></li>
+    <li><a href="#"> 2012 </a></li>
+    <li><a href="#"> 2011 </a></li>
+    <li><a href="#"> 2010 </a></li>
+    <li><a href="#"> 2009 </a></li>
+    <li><a href="#"> 2008 </a></li>
+    <li><a href="#"> 2007 </a></li>
+    <li><a href="#"> 2006 </a></li>
+    <li><a href="#"> 2005 </a></li>
+    <li><a href="#"> 2004 </a></li>
+    <li><a href="#"> 2003 </a></li>
+    <li><a href="#"> 2002 </a></li>
+    <li><a href="#"> 2001 </a></li>
+    <li><a href="#"> 2000 </a></li>
+  </ul>
+</div>
