--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.scss
@@ -67,16 +67,16 @@ table{
   color: #00003d;
   opacity: 0.8;
   font-weight: bold;
-
 }
 
 
 .alinha-equipamentos{
   text-align: left;
-  font-size: 11px;
+  font-size: 10px;
   color: #00003d;
+}
 
-
-
-
+div{
+  float: left;
+  margin-left: 300px;
 }
