--- a/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
+++ b/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.html
@@ -1,12 +1,18 @@
 <div class="horizontal-scroll">
-  <table class="tabela" width="500px" height="340px" border="0">
+  <table class="tabela" width="41%" height="343px" border="0">
     <thead>
     <tr class="black-muted-bg">
-      <th colspan="4" class="cabeçalho"> INDICADORES ORÇAMENTÁRIOS  </th>
+      <th colspan="4" class="cabeçalho" height="20px"> INDICADORES ORÇAMENTÁRIOS  </th>
     </tr>
+    <tr class="black-muted-bg">
+      <th colspan="4" id="back"> <ano-buttons> </ano-buttons> </th>
+    </tr>
+
     </thead>
 
     <tbody>
+
+
 
     <tr>
      <td>
