--- a/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
+++ b/src/app/pages/tela2/indicadoresSociais/indicadoresSociais.html
@@ -1,8 +1,8 @@
 <div>
-    <table>
+    <table width="102.5%">
      <thead>
       <tr class="black-muted-bg">
-        <th colspan="4" class="cabeçalho"> INDICADORES SOCIAIS </th>
+        <th colspan="4" class="cabeçalho" height="20px"> INDICADORES SOCIAIS </th>
       </tr>
      </thead>
 
