--- a/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.scss
+++ b/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.scss
@@ -2,7 +2,6 @@
   width:230px;
   height:180px;
   background-color: white;
-  opacity: 0.7;
   overflow-y:auto;
   overflow-x: hidden;
   float: none;
@@ -32,4 +31,9 @@ ul li ul {
 }
 ul li:hover ul {
   display: block;
+}
+
+div{
+  float: left;
+  margin-left: 140px;
 }
