--- a/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
+++ b/src/app/pages/tela2/dadosMunicipais2/dadosMunicipais2.html
@@ -1,7 +1,10 @@
-<div  class="col-xl-5 col-lg-5 col-md-5">
+<div class="col-xl-5 col-lg-5 col-md-5">
     <table border="0">
       <tr>
         <td class="alinhaesq"> MUNICÍPIO <p class="municipio"> Barra do <br> Piraí </p></td>
+      </tr>
+
+      <tr>
         <td class="alinhadir"> FAMÍLIAS <br> VULNERÁVEIS  <p class="dados"> 9.014</p></td>
       </tr>
 
@@ -22,7 +25,7 @@
     <hr>
     </table>
 
-  <table>
+  <table width="150px">
     <tr class="alinha-equipamentos">
       <td> CRAS </td>
       <td> CREAS </td>
@@ -34,6 +37,7 @@
      <td> 1 </td>
      <td> 0 </td>
     </tr>
+
   </table>
 
 
