--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
@@ -1,5 +1,3 @@
-
-
 .alinhacentro{
   font-size: 110%;
   text-align: center;
@@ -32,3 +30,17 @@ table{
   opacity: 0.9;
 }
 
+#barra-de-rolar{
+  width:528px;
+  height:300px;
+  background-color: #c1ccc8;
+  opacity: 0.9;
+  overflow-y:auto;
+  overflow-x: hidden;
+  float: none;
+  margin-left: 20px;
+}
+
+div{
+  margin-left: 928px;
+}
