--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -1,4 +1,19 @@
+<style>
+  div{
+    color: #000000;
+  }
 
+  h4{
+    color: #000000;
+  }
+
+  label{
+    color: #000000;
+  }
+  textarea{
+  color: #000000;
+  }
+</style>
 
 <hr color="white">
 
@@ -19,9 +34,10 @@
       <ba-card class="col-xl-6 col-xl-15"
                title="FALE CONOSCO" baCardClass="feed-panel">
         &nbsp;
-        <img src="{{ ( 'porte'| baProfilePicture ) }}" width="820" height="115">
-        <h4> <b> <img src="{{ ( 'fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </b> </h4>
-        <h4> <b> <img src="{{ ( 'email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653 </b> </h4>
+        <img src="{{ ( 'porte'| baProfilePicture ) }}" width="940" height="115">
+        &nbsp;
+        <h4>  <img src="{{ ( 'Fale conosco'| baProfilePicture ) }}" width="45" height="45"> &nbsp;Avenida Marechal Câmara, 370 - 6º Andar - Centro - Rio de Janeiro - RJ - 20.020-080 </h4>
+        <h4>  <img src="{{ ( 'Email'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;cao.cidadania@mprj.mp.br <img src="{{ ( 'Telefone'| baProfilePicture ) }}" width="20" height="20"> &nbsp;&nbsp;2531-9728 | 2220-2462 | 2215-1407 - FAX 2240-4653</h4>
 
         <hr color="grey">
 
@@ -59,7 +75,7 @@
 &nbsp;
 
         <ba-card class="col-xl-0 col xl-0"
-        title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'manuais'| baProfilePicture ) }}" width="45" height="45">
+        title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'Manuais'| baProfilePicture ) }}" width="45" height="45">
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">
           &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
           &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
@@ -81,7 +97,7 @@
                title="PERGUNTAS FREQUENTES" baCardClass="">
 
         <div class="panel panel-default">
-          <img src="{{ ( 'faq'| baProfilePicture ) }}" width="45" height="45">
+          <img src="{{ ( 'Faq'| baProfilePicture ) }}" width="45" height="45">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4></a>
           <div id="collapseOne" class="panel-collapse collapse">
             <div class="panel-body">
@@ -135,23 +151,7 @@
                 <hr color="grey">
 
 
-                <a href="#" class="btn btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-primary btn-white">Button</a>
 
-                <a href="#" class="btn btn-raised btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-info btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-success btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-warning btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-danger btn-white">Button</a>
-                <a href="#" class="btn btn-raised color-royal btn-white">Button</a>
-
-                <a href="#" class="btn btn-raised btn-default">Button</a>
-                <a href="#" class="btn btn-raised btn-info">Button</a>
-                <a href="#" class="btn btn-raised btn-success">Button</a>
-                <a href="#" class="btn btn-raised btn-warning">Button</a>
-                <a href="#" class="btn btn-raised btn-danger">Button</a>
-                <a href="#" class="btn btn-raised btn-royal">Button</a>
-                <a href="#" class="btn btn-raised btn-info">Button</a>
 
 
 
