-Alteração dos Botões: Equipamentos, Ano e Municípios de btn bg-outline-default para btn btn-default btn-raised.
-Ajuste dos elementos do card Rio de Janeiro; alinhamento dos elementos; inclusão das linhas divisórias entre CRAS, CREAS E CENTRO POP.

-Alinhamento dos dados municipais com o card Rio de Janeiro.

--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
@@ -9,18 +9,17 @@
       </tr>
 
      <tr>
-        <td class="alinhadir"> TOTAL DE  EQUIPAMENTOS <p class="dados"> 583 </p></td>
+        <td class="alinhadir" colspan="3"> TOTAL DE <br> EQUIPAMENTOS <p class="dados"> 583 </p></td>
       </tr>
 
-     <hr>
 
      <tr>
-       <td class="alinhacentro"> CRAS <p class="dados"> 450 </p> </td>
-       <td class="alinhacentro"> <br> CENTRO POP <p class="dados"> 19 </p> </td>
+       <td class="alinhacentro borda-td-top"> CRAS <p class="dados"> 450 </p> </td>
+       <td class="alinhacentro borda-td-top borda-td-left"> <br> CENTRO POP <p class="dados"> 19 </p> </td>
      </tr>
 
      <tr>
-       <td class="alinhacentro"> CREAS <p class="dados"> 114 </p></td>
+       <td class="alinhacentro borda-td-top borda-td-dir"> CREAS <p class="dados"> 114 </p></td>
      </tr>
 
     </table>
