--- a/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
+++ b/src/app/pages/tela1/pecasAtuacao/pecasAtuacao.html
@@ -4,7 +4,7 @@
     <tr class="black-muted-bg">
       <td class="pecas-icons"> </td>
       <td > <img src="{{ ( 'pecas-de-atuacao2'| baProfilePicture ) }}" width="40" height="50" > <b> PEÇAS DE ATUAÇÃO </b> <br>
-        Modelos padrão de documentos  MPRJ para utilização pelos usuários </td>
+        <br> Modelos padrão de documentos  MPRJ para utilização pelos usuários </td>
     </tr>
     </thead>
     <tbody>
