-Ajuste dos elementos da tela2: dados dos municípios.

--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.html
@@ -19,7 +19,7 @@
         <p class="parágrafo"> Rua José Ferreira Aguiar ( Antiga Rua Ana Nery),128 - Centro - Barra do Piraí</p>
           <p class="parágrafo"> <i class="ion-email"></i>  27.123-150
             <img src="{{ ( 'telefone'| baProfilePicture ) }}" width="12" height="12">  24 2443-1087</p>
-                  Porte <p class="parágrafo"> GRANDE </p>
+                <br>  Porte <p class="parágrafo"> GRANDE </p>
         </td>
           </ba-card>
 
