--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.html
@@ -1,5 +1,5 @@
 <div>
-   <table width="97%">
+   <table width="90%" height="290px">
       <tr bgcolor="steelblue">
         <th class="estado" colspan="3"> ESTADO <p class="fonte"> RIO DE JANEIRO </p></th>
       </tr>
@@ -15,7 +15,7 @@
 
      <tr>
        <td class="alinhacentro borda-td-top"> CRAS <p class="dados"> 450 </p> </td>
-       <td class="alinhacentro borda-td-top borda-td-left"> <br> CENTRO POP <p class="dados"> 19 </p> </td>
+       <td class="alinhacentro borda-td-top borda-td-left" rowspan="2"> CENTRO <br>  POP <p class="dados"> 19 </p> </td>
      </tr>
 
      <tr>
