--- a/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.scss
+++ b/src/app/pages/tela2/rioDeJaneiro/rioDeJaneiro.scss
@@ -59,13 +59,13 @@ table{
 
 
 .borda-td-left {
-  border-left: 1px solid gray;
+  border-left: 1px solid darkgrey;
 }
 
 .borda-td-dir {
-  border-right: 1px solid gray;
+  border-right: 1px solid darkgrey;
 }
 
 .borda-td-top {
-  border-top: 1px solid gray;
+  border-top: 1px solid darkgrey;
 }
