- Inserção de background nas tables. - Alteração da cor dos botões.

--- a/src/app/pages/tela2/buttons/components/equipamentoButtons/equipamentoButtons.html
+++ b/src/app/pages/tela2/buttons/components/equipamentoButtons/equipamentoButtons.html
@@ -1,7 +1,7 @@
 <div class=" alinha-direita">
   <div class="col-sm-4 col-xs-6 col-lg-4 col-md-6">
     <div class="btn-group flex-dropdown" dropdown>
-      <button type="button" class="btn btn-default btn-raised" dropdownToggle addToggleClass="true">
+      <button type="button" class="btn bg-default" dropdownToggle addToggleClass="true">
         Tipo de Equipamento
         <span class="sr-only">Toggle Dropdown</span>
       </button>
