--- a/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.scss
+++ b/src/app/pages/tela2/indicadoresOrcamentarios/indicadoresOrcamentarios.scss
@@ -21,10 +21,8 @@
 
 table{
   background-color: #c1ccc8;
-  opacity: 0.9;
 }
 
 #back{
-  background-color: #c1ccc8;
-  opacity: 0.9;
+  background-color: transparent;
 }
