--- a/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
+++ b/src/app/pages/tela2/listaEquipamentos/listaEquipamentos.scss
@@ -27,14 +27,12 @@ hr{
 
 table{
   background-color: #c1ccc8;
-  opacity: 0.9;
 }
 
 #barra-de-rolar{
   width:528px;
   height:230px;
-  background-color: #c1ccc8;
-  opacity: 0.9;
+  background-color: transparent;
   overflow-y:auto;
   overflow-x: hidden;
   float: none;
