--- a/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.html
+++ b/src/app/pages/tela2/buttons/components/municipiosButtons/municipiosButtons.html
@@ -1,5 +1,5 @@
 <div class="btn-group flex-dropdown" dropdown>
-    <button type="button" class="btn btn-default btn-raised" dropdownToggle addToggleClass="true">
+    <button type="button" class="btn bg-default" dropdownToggle addToggleClass="true">
       <span class="sr-only">Toggle Dropdown</span>
     </button>
     <ul class="dropdown-menu" dropdownMenu id="barra-de-rolagem">
