Cor do fundo modificada. Tabela condesada(ok).

--- a/src/app/theme/components/baPageTop/baPageTop.html
+++ b/src/app/theme/components/baPageTop/baPageTop.html
@@ -1,14 +1,14 @@
 <div class="page-top clearfix" >
 
    <a routerLink="/pages/dashboard"><span></span></a>
-    <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon"> </a>
+    <a href (click)="toggleMenu()" class="collapse-menu-link ion-navicon">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </a>
 
     <a href="#">
-      <img src="{{ ( 'observatorio' | baProfilePicture ) }}" width="150px" height="50px">
+      <img src="{{ ( 'observatorio' | baProfilePicture ) }}" width="160px" height="50px">
     </a>
 
     <a href="#">
-      <img src="{{ ( 'mprj' | baProfilePicture ) }}" width="150px" height="65px">
+      <img src="{{ ( 'mprj' | baProfilePicture ) }}" width="170px" height="65px">
     </a>
 
   <div class="search">
@@ -18,23 +18,23 @@
 
   <div class="user-profile clearfix" align="right">
     <a href="http://localhost:3000/#/pages/tela1">
-     <img src="{{ ( 'inicio' | baProfilePicture ) }}" width="35px" height="35px"> Início
+      <img src="{{ ( 'inicio' | baProfilePicture ) }}" width="45px" height="45px"><b>Início &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
     </a>
 
     <a href="http://localhost:3000/#/pages/tela2">
-      <img  src="{{ ( 'dados-dos-municipios' | baProfilePicture ) }}" width="20px" height="20px"> Dados dos Municípios
+      <img  src="{{ ( 'dados-dos-municipios' | baProfilePicture ) }}" width="25px" height="27px"> <b>Dados dos Municípios&nbsp;&nbsp;&nbsp;&nbsp;</b>
     </a>
 
     <a href="http://localhost:3000/#/pages/tela3">
-     <img   src="{{ ( 'inspecoes' | baProfilePicture ) }}" width="35px" height="35px"> Inspeções
+      <img   src="{{ ( 'inspeção' | baProfilePicture ) }}" width="40px" height="45px"> <b>Inspeções&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
     </a>
 
     <a href="http://localhost:3000/#/pages/tela4">
-      <img src="{{ ( 'ajuda' | baProfilePicture ) }}" width="35px" height="35px"> Ajuda
+      <img src="{{ ( 'ajuda' | baProfilePicture ) }}" width="45px" height="50px"> <b>Ajuda&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b>
     </a>
 
     <a href="http://aplicacoes.mds.gov.br/sagi/portal/">
-      <img src="{{ ( 'sitio-mds' | baProfilePicture ) }}" width="25px" height="25px"> MDS
+      <img src="{{ ( 'sitio-mds' | baProfilePicture ) }}" width="40px" height="37px"> <b>MDS</b>
     </a>
     </div>
 
