--- a/src/app/pages/tela4/tela4.html
+++ b/src/app/pages/tela4/tela4.html
@@ -76,11 +76,11 @@
 
         <ba-card class="col-xl-0 col xl-0"
         title="MANUAIS E CARTILHAS" baCardClass=""> &nbsp;&nbsp;&nbsp;<img src="{{ ( 'Manuais'| baProfilePicture ) }}" width="45" height="45">
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">
-          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="120" height="130">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="125" height="130">&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'cartilha'| baProfilePicture ) }}" width="120" height="130">&nbsp;&nbsp;&nbsp;&nbsp;
+          &nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ ( 'população'| baProfilePicture ) }}" width="120" height="130">&nbsp;&nbsp;&nbsp;&nbsp;
         </ba-card>
         <div>
 
@@ -101,7 +101,9 @@
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><h4><b>1. O QUE É CADASTRO ÚNICO?</b></h4></a>
           <div id="collapseOne" class="panel-collapse collapse">
             <div class="panel-body">
-              <h3><i>&nbsp; O Cadastro Único para Programas Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
+              <h3><i>
+                <hr color="grey">
+                &nbsp; O Cadastro Único para Programas Sociais do Governo Federal é um instrumento que identifica e caracteriza as famílias
                 com renda mensal de até meio salário mínimo por pessoa ou de três salários mínimos no total.
                 Dessa forma, o Cadastro Único possibilita conhecer a realidade socioeconômica dessas famílias, trazendo informações
                 de todo o núcleo familiar, das características do domicílio, das formas de acesso a serviços públicos essenciais e também
@@ -122,7 +124,8 @@
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwO">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>2. QUAIS OS DIAS E HORÁRIOS DE FUNCIONAMENTO DO CRAS?</b></h4></a>
             <div id="collapseTwO" class="panel-collapse collapse">
               <div class="panel-body">
-                <h3><i> Dia: Segunda à Sexta. - Horário: 08:00h às 18:00h.</i></h3>
+                <h3><i>O CRAS deve funcionar, no mínimo, cinco dias por semana, por oito horas diárias, totalizando 40 horas semanais, com a equipe de referência do CRAS completa. Esse horário pode ser flexível, permitindo que a unidade funcione aos finais de semana e horários noturnos, desde que isso ocorra para possibilitar uma maior participação das famílias e da comunidade nos serviços, ações e projetos ofertados. (mds.gov)
+                  Na maioria das unidades a carga horária adota é de segunda a sexta - feira / horário de 8h as 18 horas.</i></h3>
               </div>
             </div>
 
@@ -133,17 +136,47 @@
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>3. QUAIS SÃO AS FAIXAS ETÁRIAS DO SERVIÇO DE CONVIVÊNCIA E FORTALECIMENTO DE VÍNCULOS?</b></h4></a>
               <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <h3><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></h3>
+                  <h3><i>O que é?
+                    O SCFV é um serviço da Proteção Social Básica do SUAS que é ofertado de forma complementar ao trabalho social com famílias realizado por meio do Serviço de Proteção e Atendimento Integral às Famílias (PAIF) e do Serviço de Proteção e Atendimento Especializado às Famílias e Indivíduos (PAEFI).
+                    O Serviço de Convivência e Fortalecimento de Vínculos (SCFV) realiza atendimentos em grupo. São atividades artísticas, culturais, de lazer e esportivas, dentre outras, de acordo com a idade dos usuários.
+                    É uma forma de intervenção social planejada que cria situações desafiadoras, estimula e orienta os usuários na construção e reconstrução de suas histórias e vivências individuais, coletivas e familiares.
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Unidade de oferta
+                    O serviço pode ser ofertado no Centro de Referência da Assistência Social (CRAS) ou nos Centros de Convivência.
+                    &nbsp;
+                    Público Atendido
+
+                    Podem participar crianças, jovens e adultos; pessoas com deficiência; pessoas que sofreram violência, vítimas de trabalho infantil, jovens e crianças fora da escola, jovens que cumprem medidas socioeducativas, idosos sem amparo da família e da comunidade ou sem acesso a serviços sociais, além de outras pessoas inseridas no Cadastro Único.
+                    Objetivo
+                    O serviço tem como objetivo fortalecer as relações familiares e comunitárias, além de promover a integração e a troca de experiências entre os participantes, valorizando o sentido de vida coletiva. O SCFV possui um caráter preventivo, pautado na defesa e afirmação de direitos e no desenvolvimento de capacidades dos usuários.
+                    Ações/Atividades
+                    Os usuários do SCFV são organizados em grupos, a partir de faixas etárias ou intergeracionais:
+                    §     Crianças até 6 anos
+                    §     Crianças e adolescentes de 6 a 15 anos
+                    §     Adolescentes de 15 a 17 anos
+                    §     Jovens de 18 a 29 anos
+                    §     Adultos de 30 a 59 anos
+                    §     Pessoas idosas
+                    &nbsp;
+                    Formas de Acesso
+
+                    Para participar do Serviço de Convivência e Fortalecimento de Vínculos, o cidadão deve procurar o Centro de Referência da Assistência Social (CRAS) do seu município.
+                  </i></h3>
                 </div>
               </div>
 
               <hr color="grey">
 
               <div class="panel panel-default">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS INDIVIDUAIS?</b></h4></a>
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h4><b>4. O QUE SÃO BENEFÍCIOS EVENTUAIS?</b></h4></a>
                 <div id="collapseFour" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <h3><i>AAAAAA BBBBBB CCCCCC DDDDDD</i></h3>
+                    <h3><i>Os Benefícios Eventuais caracterizam-se por seu caráter suplementar e provisório, prestados aos cidadãos e às famílias em virtude de nascimento, morte, situações de vulnerabilidade temporária e de calamidade pública.
+                      Deve ser concedido primando-se pelo respeito à dignidade dos indivíduos que deles necessitem. A prestação e o financiamento dos benefícios eventuais são de competência dos municípios e do Distrito Federal, com responsabilidade de cofinanciamento pelos estados.
+                    &nbsp;
+                      A oferta de Benefícios Eventuais pode ocorrer mediante apresentação de demandas por parte de indivíduos e familiares em situação de vulnerabilidade, ou por identificação dessas situações no atendimento dos usuários nos serviços socioassistenciais e do acompanhamento sociofamiliar no âmbito da Proteção Social Básica (PSB) e Proteção Social Especial (PSE).
+                      (Fonte: MDS)
+                    </i></h3>
                   </div>
                 </div>
 
